dev-006 Enabled google authentication.

--- a/erpAgroflori/requirements.txt
+++ b/erpAgroflori/requirements.txt
@@ -1,6 +1,8 @@
+django
 django-environ
 django-crispy-forms
 Pillow
 django-phonenumber-field[phonenumbers]
 psycopg2
 crispy_bootstrap4
+django-allauth
